# CppTemplate

./: .clang-tidy  .env  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
bench/: bench.cmake  benchmark.cpp
cmake/: CPM.cmake  libraries.cmake
lib/: factorial.cpp  fibonacci.cpp  lib.cmake
source/: main.cpp
source/factorial/: factorial.cpp
test/: test.cmake  test.cpp
